Fixing double scroll-bar 5

--- a/style.css
+++ b/style.css
@@ -19,7 +19,11 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: initial;
+  overflow-y: hidden;
+}
+
+html {
+  overflow-y: auto;
 }
 
 nav {
